--- a/lang/pl.json
+++ b/lang/pl.json
@@ -25,6 +25,6 @@
   "Embed.Map": "Map",
   "Embed.ContentReport": "**!{0} {1}** w grze, aby oznaczyć to zgłoszenie jako obsłużone. -> Możesz wpisać tutaj cokolwiek lub pozostawić puste. Pinguj członka w ten sposób: <@MemberId> lub rolę: <@&RoleId>",
   "Embed.ContentReportHandled": "Obsługiwane przez {0}",
-  "ChatMenu.ReasonsTitle": "[{green}REPORT{default}] Wybierz powód",
-  "ChatMenu.PlayersTitle": "[{green}REPORT{default}] Wybierz gracza"
+  "Menu.ReasonsTitle": "[{green}REPORT{default}] Wybierz powód",
+  "Menu.PlayersTitle": "[{green}REPORT{default}] Wybierz gracza"
 }
