--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -33,8 +33,8 @@
   "Embed.Map": "Mapa",
   "Embed.ContentReport": "**!{0} {1}** dentro do jogo para marcar como resolvido. Você pode escrever qualquer coisa aqui, como: <@IdDoMembro> ou um cargo: <@&IdDoCargo>",
   "Embed.ContentReportHandled": "Resolvido pelo {0}",
-  "ChatMenu.ReasonsTitle": "[{green}REPORTE{default}] Escolha um motivo",
-  "ChatMenu.PlayersTitle": "[{green}REPORTE{default}] Escolhar um Jogador",
+  "Menu.ReasonsTitle": "[{green}REPORTE{default}] Escolha um motivo",
+  "Menu.PlayersTitle": "[{green}REPORTE{default}] Escolhar um Jogador",
   "Report_1": "Hacker",
   "Report_2": "Tóxico",
   "Report_3": "Camperando",
