--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -18,20 +18,21 @@
   "ReasonToBan": "Você foi banido do servidor por levar muitos reportes",
   "CustomReason": "Escrever o motivo do reporte",
   "Embed.Title": "Reporte",
-  "Embed.Player": "Jogador",
-  "Embed.PlayerName": "Nome",
-  "Embed.PlayerSteamid": "SteamID",
-  "Embed.Suspect": "Suspeito",
-  "Embed.SuspectName": "Nome",
-  "Embed.SuspectSteamid": "SteamID",
-  "Embed.Admin": "Admin",
+  "Embed.AuthorName": "Nome do Autor",
+  "Embed.AuthorSteamid": "SteamID do Autor",
+  "Embed.TargetName": "Nome do Suspeito",
+  "Embed.TargetSteamid": "SteamID do Suspeito",
   "Embed.CanceledBy": "Cancelado por",
-  "Embed.AdminName": "Nome",
-  "Embed.AdminSteamid": "SteamID",
+  "Embed.AdminName": "Nome do Admin",
+  "Embed.AdminSteamid": "SteamID do Admin",
   "Embed.Reason": "Motivo",
   "Embed.Ip": "Ip",
   "Embed.Map": "Mapa",
-  "Embed.ContentReport": "**!{0} {1}** dentro do jogo para marcar como resolvido. Você pode escrever qualquer coisa aqui, como: <@IdDoMembro> ou um cargo: <@&IdDoCargo>",
+  "Embed.ClickHere": "Clique Aqui",
+  "Embed.Profile": "Perfil",
+  "Embed.Handled": "RESOLVIDO",
+  "Embed.Deleted": "DELETADO",
+  "Embed.ContentReport": "dentro do jogo para marcar como resolvido. Você pode escrever qualquer coisa aqui, como: <@IdDoMembro> ou um cargo: <@&IdDoCargo>",
   "Embed.ContentReportHandled": "Resolvido pelo {0}",
   "Menu.ReasonsTitle": "[{green}REPORTE{default}] Escolha um motivo",
   "Menu.PlayersTitle": "[{green}REPORTE{default}] Escolhar um Jogador",
